# openairinterface5g

./: .gitignore  CMakeLists.txt  policyRatio1.json  rrmPolicy.json
ci-scripts/: cls_containerize.py  cls_oaicitest.py
ci-scripts/conf_files/: coresim.gnb-vnf.sa.band78.273prb.aerial.conf  delta-processing-elements.xml  delta-user-plane-configuration.xml  gnb-vnf.sa.band78.273prb.aerial.conf  gnb.sa.band78.106prb.rfsim.neighbour.conf  gnb.sa.band78.51prb.usrpb200.conf  gnb.sa.band78.aerial.liteon.4x2.600Mbps.80Mbps.conf  neighbour-config.conf
ci-scripts/docker/: Dockerfile.unittest.ubuntu22
cmake_targets/: build_oai
cmake_targets/tools/: build_helper
common/utils/: CMakeLists.txt  system.c
doc/: Doxyfile  NR_SA_Tutorial_OAI_nrUE.md  README.md  RUNMODEM.md  TESTBenches.md  physical-simulators.md  tuning_and_security.md
docker/: Dockerfile.base.ubuntu22  Dockerfile.build.flexric.ubuntu20  Dockerfile.build.flexric.ubuntu22  Dockerfile.build.ubuntu22  Dockerfile.build.ubuntu22.web  Dockerfile.eNB.ubuntu22  Dockerfile.flexric.ubuntu20  Dockerfile.flexric.ubuntu22  Dockerfile.gNB.aerial.ubuntu20  Dockerfile.gNB.aerial.ubuntu22  Dockerfile.gNB.aerial.ubuntu22.sanitize-address  Dockerfile.gNB.ubuntu22  Dockerfile.lteUE.ubuntu22  Dockerfile.nr-cuup.ubuntu22  Dockerfile.nrUE.ubuntu22
executables/: lte-enb.c  lte-softmodem.c  lte-ue.c  lte-uesoftmodem.c  nr-gnb.c  nr-ru.c  nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c  softmodem-common.c
inainfra/containerlab/: docker-compose-cu-cp.yaml  readme.md  single-sw.drawio
inainfra/oai-cn5g/: docker-compose.yaml
inainfra/oai-cn5g-slice/: entrypoint.sh
inainfra/oai-core-ran-sw/: docker-compose-db.yaml  docker-compose-rfsim.yaml  oai.clab.yml
inainfra/oai-ran/: gnb-cuup.sa.f1.slice1.conf  gnb.sa.band78.fr1.106PRB.2x2.usrpx410.352501.conf  gnb_entrypoint.sh
inainfra/oai-slice-sepertate-interface/: docker-compose-splited.yaml  gnb_entrypoint.sh
inainfra/simple-linux-switch/: Dockerfile
inainfra/three-vms/: start-sw.sh  three-vms.clab.yml
nvipc_src.2024.06.29/: CMakeLists.txt  README.md  test_ipc.sh
nvipc_src.2024.06.29/nvIPC/: CMakeLists.txt  nv_ipc_common.c
nvipc_src.2024.06.29/nvIPC/common/: array_queue.c  array_queue.h  fd_share.c  fd_share.h  nv_ipc_debug.c  nv_ipc_debug.h  nv_ipc_efd.c  nv_ipc_efd.h  nv_ipc_epoll.c  nv_ipc_epoll.h  nv_ipc_mempool.c  nv_ipc_mempool.h  nv_ipc_ring.c  nv_ipc_ring.h  nv_ipc_sem.c  nv_ipc_sem.h  nv_ipc_shm.c  nv_ipc_shm.h  nv_lockfree.hpp  nv_ring.h  shm_logger.c  shm_logger.h
nvipc_src.2024.06.29/nvIPC/configs/: nv_ipc_config.c  nv_ipc_yaml_parser.cpp
nvipc_src.2024.06.29/nvIPC/cuda/: nv_ipc_cuda_utils.cu  nv_ipc_cuda_utils.h  nv_ipc_cudapool.cu  nv_ipc_cudapool.h
nvipc_src.2024.06.29/nvIPC/doca/: nv_ipc_doca.h  nv_ipc_doca_if.c  nv_ipc_doca_utils.c
nvipc_src.2024.06.29/nvIPC/dpdk/: nv_ipc_dpdk.h  nv_ipc_dpdk_if.c  nv_ipc_dpdk_utils.c
nvipc_src.2024.06.29/nvIPC/gpudata/: nv_ipc_gpudata_utils.cu  nv_ipc_gpudata_utils.h  nv_ipc_gpudatapool.cu  nv_ipc_gpudatapool.h
nvipc_src.2024.06.29/nvIPC/include/: nv_ipc.h  nv_ipc.hpp  nv_ipc_config.h  nv_ipc_dpdk_utils.h  nv_ipc_forward.h  nv_ipc_utils.h
nvipc_src.2024.06.29/nvIPC/shm/: nv_ipc_shm_if.c
nvipc_src.2024.06.29/nvIPC/tests/: CMakeLists.txt
nvipc_src.2024.06.29/nvIPC/tests/cuda/: CMakeLists.txt  cuda_ipc.cu  test_cuda.cu  test_cuda.h  test_memcpy.cu
nvipc_src.2024.06.29/nvIPC/tests/cunit/: CMakeLists.txt  nvipc_cunit.c  test_common.c  test_common.h  test_ipc.c  test_ipc.h  test_timing.c  test_timing.h
nvipc_src.2024.06.29/nvIPC/tests/dump/: CMakeLists.txt  ipc_dump.c
nvipc_src.2024.06.29/nvIPC/tests/example/: CMakeLists.txt  nvipc_config.yaml  test_ipc.c
nvipc_src.2024.06.29/nvIPC/tests/forwarder/: CMakeLists.txt  forwarder.cpp  forwarder.yaml
nvipc_src.2024.06.29/nvIPC/tests/pcap/: CMakeLists.txt  pcap_collect.c
nvipc_src.2024.06.29/nvIPC/tests/sched/: CMakeLists.txt  sched_fifo_poll.c
nvipc_src.2024.06.29/nvIPC/udp/: nv_ipc_udp_if.c
nvipc_src.2024.06.29/nvlog/: CMakeLists.txt
nvipc_src.2024.06.29/nvlog/config/: nvlog_config.yaml
nvipc_src.2024.06.29/nvlog/include/: aerial_event_code.h  exit_handler.hpp  memtrace.h  nv_utils.h  nvlog.h  nvlog.hpp  nvlog_fmt.hpp  stat_log.h  yaml.hpp
nvipc_src.2024.06.29/nvlog/src/: aerial_event_code.c  exit_handler.cpp  nvlog.c  nvlog.cpp  stat_log.c
nvipc_src.2024.06.29/nvlog/test/: CMakeLists.txt  nvlog_test.cpp
oai-cn5g/conf/: config.yaml
oai-cn5g/database/: oai_db.sql
oai-conf/: gnb.sa.band78.fr1.106PRB.2x2.usrpx410.352501.conf
oai-conf/containerlab/: .gitignore  docker-compose-cn.yaml  docker-compose-cu-up.yaml  docker-compose-du-ue.yaml  docker-compose.yaml  oai.clab.yml  trible-sws.drawio
oai-conf/docs/: readme.md
oai-conf/linux_switch/: Dockerfile  containerd.clab.yml  readme.md
oai-conf/oai-cn5g/: docker-compose.yaml
oai-conf/oai-cn5g-slice/: docker-compose-slicing-basic-nrf.yaml
oai-conf/oai-core-ran-sw/: .gitignore  create-edge-cgroup.sh  docker-compose-base.yaml  docker-compose-db.yaml  docker-compose-rfsim.yaml  docker-compose-x410.yaml  docker-compose.yaml  oai.clab.yml  start-du-x410.sh
oai-conf/oai-ran/: Dockerfile  docker-compose.yaml  gnb-cucp.sa.f1.conf  gnb-cuup.sa.f1.slice2.conf  gnb-du.sa.conf  gnb.sa.band78.fr1.106PRB.2x2.usrpx410.352501.conf  readme.md
oai-conf/patch/: amf.patch
oai-conf/simple-linux-switch/: .gitignore  docker-compose-single-linux-sw.yaml  docker-compose.yaml  readme.md
oai-conf/slicing/: gnb-cucp.sa.f1.conf  gnb-cuup.sa.f1.slice1.conf  gnb-cuup.sa.f1.slice2.conf  gnb-cuup.sa.f1.slice3.conf  gnb-du.sa.conf  gnb-du.sa.nocotainer.conf  readme.md
openair1/PHY/: defs_gNB.h  impl_defs_top.h
openair1/SCHED_NR/: phy_procedures_nr_gNB.c
openair1/SCHED_NR_UE/: defs.h  fapi_nr_ue_l1.c  phy_procedures_nr_ue.c  phy_procedures_nr_ue_sl.c
openair2/: CMakeLists.txt
openair2/LAYER2/NR_MAC_UE/tests/: CMakeLists.txt
slicing/: docker-compose.yaml  gnb-cucp.sa.f1.conf  gnb-cuup.sa.f1.conf  gnb-cuup.sa.f1.slice1.conf  gnb-cuup.sa.f1.slice2.conf  gnb-cuup.sa.f1.slice3.conf  gnb-du.sa.conf  readme.md
(+251 files in other folders)
